--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
       # env: JYTHON=org.python:jython-installer:2.5.3 FOO=foo
 
 before_install:
-  - if [ -n "$JYTHON" ]; then before_install_jython.sh; source $HOME/myvirtualenv/bin/activate ;fi
+  - if [ -n "$JYTHON" ]; then ./before_install_jython.sh; source $HOME/myvirtualenv/bin/activate ;fi
   - if [ -n "$JYTHON" ]; then pip install jip==0.7; fi
   - if [ -n "$JYTHON" ]; then jip install joda-time:joda-time:2.3; fi
   - if [ -n "$JYTHON" ]; then export CLASSPATH=$VIRTUAL_ENV/javalib/*; fi
